# FATProfile

./: README.md
fa3-eval/: fa3.py  finfer.py  flex.py  profile_script_ncu.py
fa3-eval/result/: fa3_ncu_sweep.csv  finfer_ncu_sweep.csv  flex_ncu_sweep.csv
flashattention-t-artifact/: README.md
flashattention-t-artifact/1-figure8-main-results/: README.md
flashattention-t-artifact/1-figure8-main-results/flashattention-t/ampere/csrc/flash_attn/src/: custom_data_dump.cuh  custom_meta.cuh  custom_numerical_limits.h  custom_smem_init.cuh  flash_fwd_kernel.h  softmax_add.cuh  softmax_mma.h  softmax_mma_acc_o_rescale.cuh
flashattention-t-artifact/1-figure8-main-results/flashattention-t/ampere/cxx-tests/cmake/: cmakePrologue.cmake  flashVenv.cmake
flashattention-t-artifact/1-figure8-main-results/flashattention-t/ampere/cxx-tests/custom_api/: flash_api_custom.cuh  utility.hpp
flashattention-t-artifact/1-figure8-main-results/flashattention-t/ampere/cxx-tests/fwd_bench/: CMakeLists.txt  fp16-fwd-bench-orig.cu  fp16-fwd-bench.cu  utils.cuh
flashattention-t-artifact/1-figure8-main-results/flashattention-t/ampere/cxx-tests/fwd_bench/benches/: core.cuh  hdim128-causal.cu  hdim128-noncausal.cu  hdim64-causal.cu  hdim64-noncausal.cu
flashattention-t-artifact/1-figure8-main-results/flashattention-t/hopper/: epilogue_fwd.hpp  flash_fwd_kernel_sm90.h  flash_fwd_launch_template.h  mainloop_fwd_sm90_tma_gmma_ws.hpp  softmax_wgmma_reduce.cuh  tile_scheduler.hpp
flashattention-t-artifact/1-figure8-main-results/flashattention-t/hopper/cxx-tests/cmake/: flashVenv.cmake
flashattention-t-artifact/1-figure8-main-results/flashattention-t/hopper/cxx-tests/custom_api/: custom_api.cuh
flashattention-t-artifact/1-figure8-main-results/flashattention-t/hopper/cxx-tests/fwd_bench/: CMakeLists.txt  attn_test.cu  attn_test_orig.cu  fp16-fa3-py.py  fp8-fwd-bench-orig.cu  fp8-fwd-bench.cu  run.md  run_fat_sweep.py
flashattention-t-artifact/1-figure8-main-results/flashattention-t/hopper/cxx-tests/fwd_bench/image/: data_fa3_h100_fp16.csv  data_fa3_h100_fp8.csv  data_ours_h100_fp16.csv  data_ours_h100_fp8.csv  fa3_fp16_results.csv  fa3_fp8_results.csv  h100_fp16_bar_report.html  h100_fp8_bar_report.html  plot_fat_fa3-py_fa3-cpp.py  plot_fp16.py
flashattention-t-artifact/1-figure8-main-results/flashattention-t/hopper/cxx-tests/new_tune/: configure.py  interface.py  log  tune.py
flashattention-t-artifact/1-figure8-main-results/flashattention-t/hopper/cxx-tests/new_tune/results/: bench_result_test_b1_h16_s32768_d64_fp8_causal.json
flashattention-t-artifact/1-figure8-main-results/flashattention-t/hopper/cxx-tests/test/: generate_test_configs.py  test.cu
flashattention-t-artifact/1-figure8-main-results/flashattention-t/hopper/cxx-tests/test/generated_cu/: CMakeLists.txt  manifest.json  test_b1_h16_s4096_d128_fp8_causal_bm128_bn128_st2_prd24_cra240_p0_q0_nc2.cu
flashattention-t-artifact/1-figure8-main-results/flashattention-t/hopper/cxx-tests/tune/: bench.py  log  logg  run_utils.py  solver.py  verify.py
flashattention-t-artifact/1-figure8-main-results/flashattention-t/hopper/cxx-tests/tune/results/: top15_b1_h16_s32768_d256_fp16_noncausal.json  top15_b1_h16_s32768_d64_fp16_noncausal.json  top2_b1_h16_s32768_d256_fp16_noncausal.json  top2_b1_h16_s32768_d64_fp16_noncausal.json  top3_b1_h16_s32768_d64_fp16_noncausal.json  top746_b1_h16_s32768_d256_fp16_noncausal.json
flashattention-t-artifact/1-figure8-main-results/flashattention-t/hopper/cxx-tests/tune/results_1/: log  log1  top15_b1_h16_s32768_d128_fp16_noncausal.json  top15_b1_h16_s32768_d64_fp16_noncausal.json  (+3 more)
flashattention-t-artifact/1-figure8-main-results/flashinfer/: ampere_attention_bench.py  hopper_attention_bench.py
flashattention-t-artifact/1-figure8-main-results/plot/: plot.py
flashattention-t-artifact/1-figure8-main-results/triton/: 06-fused-attention.py
flashattention-t-artifact/2-figure11-synthetic-precision/: README.md  make_fat_pytorch.py  setup_venvs.py
flashattention-t-artifact/2-figure11-synthetic-precision/flash-attention-t/: .gitignore  CMakeLists.txt
flashattention-t-artifact/2-figure11-synthetic-precision/flash-attention-t/csrc/flash_attn/: flash_api.cpp
flashattention-t-artifact/2-figure11-synthetic-precision/flash-attention-t/csrc/flash_attn/src/: flash.h  flash_fwd_kernel.h  flash_fwd_launch_template.h  mask_mma.h  softmax_max.cuh  softmax_mma.h  softmax_mma_acc_s_rescale.h
flashattention-t-artifact/2-figure11-synthetic-precision/plot/: plot.py  runner_json.py
flashattention-t-artifact/2-figure11-synthetic-precision/prec_bench/: loop_runner.py  run_fp16_fa_sdpa.py  run_fp16_math_sdpa.py  run_fp64_math_sdpa.py  runner.py  runner_json.py  tensor_compare.py  tensor_gen.py  tensor_gen_namescheme.py
flashattention-t-artifact/3-table2-end2end-generative-accuracy/: README.md  download_models.py  setup_venvs.py
flashattention-t-artifact/3-table2-end2end-generative-accuracy/hf_token_guide/: README.md
(+4 files in other folders)
